--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-table": "^8.21.3",
     "csv-parse": "^6.1.0",
     "drizzle-orm": "^0.45.1",
+    "geist": "^1.7.0",
     "next": "16.1.6",
     "nodemailer": "^8.0.1",
     "react": "19.2.3",
